# infra-demo

./: .env.example  .gitignore  Auth.md  Authentication.md  CLAUDE.md  Dockerfile  Optimization.md  Plan.md  docker-compose.yml  pyproject.toml  start.sh  start_env.sh  stop.sh
.claude/subagents/: pr-reviewer.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_password_hash_to_users.py  003_add_roles_permissions.py  004_add_permission_crud_permissions.py  005_add_activity_logs.py
app/: celery_app.py  config.py  context.py  database.py  dependencies.py  main.py  redis.py
app/api/: router.py
app/api/v1/: router.py
app/entity/: permission.py  user.py
app/middleware/: logging.py
app/models/: base.py  user.py
app/repository/: activity_log_repository.py  permission_repository.py  role_repository.py  user_repository.py
app/repository/entity/: activity_log.py  base.py  role.py  user.py
app/schemas/: common.py  user.py
app/service/: activity_log_service.py  auth_service.py  permission_service.py  role_service.py  user_service.py
app/tasks/: example_tasks.py
app/tools/auth/: hashing.py  jwt.py
docs/: Auth.md  Authentication.md  Authorization.md  Plan.md  Role Management.md
docs/superpowers/plans/: 01-create-permission.md  02-list-permissions.md  (+7 more)
tests/: conftest.py
tests/repository/: test_permission_repository.py  test_role_repository.py
tests/service/: test_role_service.py
tests/test_api/: test_activity_logs.py  test_auth.py  test_authorization.py  test_permissions.py  test_roles.py  test_roles_user_role.py  test_users.py
(+17 files in other folders)
