[tool.poetry]
name = "infra-demo"
version = "0.1.0"
description = "FastAPI backend service framework"
authors = ["wj"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.136.1"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.13.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
pydantic-settings = "^2.5.0"
pydantic = {extras = ["email"], version = "^2.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
